# winds

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  config.yaml
.github/workflows/: main.yml
src/: config.rs  error.rs  lib.rs  main.rs  stamp.rs
src/api/: mod.rs
src/api/v1/: mod.rs  model.rs
src/api/v2/: mod.rs  model.rs
src/grib/: mod.rs  utils.rs
src/grib/sections/: mod.rs  sect1.rs  sect3.rs  sect4.rs  sect5.rs  sect6.rs
src/grib/sections/sect7/: complex.rs  complex_spacial_diff.rs  groups.rs  mod.rs  simple.rs
src/providers/: mod.rs  noaa.rs  zezo.rs
src/providers/json/: mod.rs
src/wind/: mod.rs
