[package]
name = "winds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-process = "1.3.0"
async-recursion = "0.3.2"
confy = { git = "https://github.com/rust-cli/confy", version = "0.4.0", default-features = false, features = ["yaml_conf"] }
chrono = { version = "0.4.19", features = ["serde"] }
flate2 = "1.0"
http = "0.2.5"
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11.6", default-features = false, features = ["rustls-tls", "gzip"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rust-s3 = { version = "0.28.0", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
structopt = "0.3.25"
tempfile = "3.2.0"
thiserror = "1.0.30"
tokio = "1.14.0"